test/asm/error-limit.err
error: error-limit.asm(2):
    'x' already defined at error-limit.asm(1)
error: The maximum of 1 error was reached (configure with "-X/--max-errors"); assembly aborted!
