test/asm/error-limit.asm
def x equ 1
def x equ 2
